--- a/test.html
+++ b/test.html
@@ -91,7 +91,7 @@
 
 
 
-        var server = io.connect("http://localhost:3000");
+        var server = io.connect("https://robo-gram.glitch.me/");
         //var server = io.connect("http://192.168.0.70:3000");
         //サーバから受け取るイベント
         server.on("connect", function() {
